prevent overflow in desktop view

--- a/social-media-dashboard-with-theme-switcher-master/styles/index.css
+++ b/social-media-dashboard-with-theme-switcher-master/styles/index.css
@@ -19,6 +19,7 @@ body{
     font-size: 0.875rem;
     height:100vh;
     background-color: var(--bg-color);
+    overflow:hidden;
 }
 
 h1{
